--- a/styles/util.module.css
+++ b/styles/util.module.css
@@ -874,9 +874,9 @@
 
   .icon {
     border-radius: 5px;
-    width: 22px;
-    height: 22px;
-    opacity: 0.65;
+    width: 26px;
+    height: 26px;
+    opacity: 0.75;
   }
 
   .singleButton {
